# PyRenderedTerminal

./: LICENSE  README.md  docs.html  download.html  index.html  pyproject.toml  pyrenderedterminal.py  setup.py
examples/: builder sim.py
pyrenderedterminal/: __init__.py  pyrenderedterminal.py  tests.py
